--- a/src/components/NodeItem/NodeItem.module.scss
+++ b/src/components/NodeItem/NodeItem.module.scss
@@ -1,12 +1,10 @@
 .contentWrapper {
-  display: grid;
-  grid-template-columns: 20px auto;
-  padding: 5px 10px;
   background: #fff;
   border-width: 1px;
   border-style: solid;
   border-radius: 2px;
   max-width: 600px;
+  min-width: 300px;
 
   &[data-issue-type='goal'] {
     border-color: var(--goal);
@@ -24,12 +22,35 @@
     border-color: var(--bug);
   }
   .heading {
+    padding: 5px 10px;
     display: flex;
-    align-items: center;
-    .key {
+    .iconKey {
+      display: flex;
       color: #666;
       white-space: nowrap;
-      margin: 0px 5px;
+      align-items: center;
+      margin-right: 8px;
+      .icon {
+        margin: 0px 5px;
+        width: 25px;
+      }
+      .link {
+        vertical-align: middle;
+      }
+      .link:hover {
+        color: rgb(0, 122, 204);
+        text-decoration: underline;
+      }
     }
+  }
+  .progress {
+    position: absolute;
+    padding: 2px 6px;
+    font-size: 12px;
+    color: white;
+    top: 0;
+    left: 0;
+    transform: translate(0, -100%);
+    transition: 0.5s height ease-in-out;
   }
 }
