added see only feature

--- a/src/components/NodeItem/NodeItem.module.scss
+++ b/src/components/NodeItem/NodeItem.module.scss
@@ -53,4 +53,8 @@
     transform: translate(0, -100%);
     transition: 0.5s height ease-in-out;
   }
+  .actionWrapper {
+    position: absolute;
+    padding: 4px;
+  }
 }
