--- a/src/component/NodeItem/NodeItem.module.scss
+++ b/src/component/NodeItem/NodeItem.module.scss
@@ -5,6 +5,7 @@
   border-radius: 2px;
   max-width: 600px;
   min-width: 300px;
+  position: relative;
 
   &[data-issue-type='goal'] {
     border-color: var(--goal);
@@ -43,7 +44,15 @@
       }
     }
   }
+  &[data-list-mode='true'] .progress {
+    opacity: 0;
+  }
+  &[data-list-mode='true']:hover .progress {
+    opacity: 1;
+  }
   .progress {
+    transition: opacity 0.2s ease-in-out;
+
     position: absolute;
     padding: 2px 6px;
     font-size: 12px;
@@ -53,6 +62,7 @@
     transform: translate(0, -100%);
     transition: 0.5s height ease-in-out;
   }
+
   .actionWrapper {
     display: flex;
     position: absolute;
