--- a/src/component/GlobalSearch/GlobalSearch.module.scss
+++ b/src/component/GlobalSearch/GlobalSearch.module.scss
@@ -9,7 +9,7 @@
     pointer-events: none;
   }
 
-  position: fixed;
+  position: absolute;
   top: 20%;
   left: 50%;
   transform: translateX(-50%);
